--- a/style.css
+++ b/style.css
@@ -20,6 +20,11 @@ p{
     width: 70%;
     padding-left: 6%;
 }
+.half-width{
+    width: 80%;
+    padding-left: 7%;
+    display: flex;
+}
 .width img{
     width: 80%;
 }
