--- a/style.css
+++ b/style.css
@@ -51,8 +51,18 @@ h3{
     background-color: lightblue;
     padding-left: 40px;
     border-radius: 30px;
-
+    border: 5px solid skyblue;
 }
 .misson img{
     width: 60%;
+}
+footer p{
+    text-align: center;
+    background-color: rgb(1, 1, 5);
+    color: oldlace;
+    box-shadow: 5px 5px 10px gray;
+    border-radius: 5px;
+    width: 100%;
+    font-size: 20px;
+    font-style: initial;
 }
